--- a/index.html
+++ b/index.html
@@ -44,22 +44,6 @@
 
       <h1><a href="index.html">Bernardo Pretti</a></h1>
       <h2 style="color:#fff"><span class="typing" style="color:#12D640"></span></h2>
-      <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li class="active"><a href="#header"> <span>Home</span></a></li>
-          <li><a href="#about"><span>About</span></a></li>
-          <li><a href="#education"> <span>Education</span></a></li>
-          <li><a href="#experience"> <span>Experience</span></a></li>
-          <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
-          <li><a href="#portfolio"> <span>Projects</span></a></li>
-          <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing"
-              target="_blank"> <span>Resume</span></a></li>
-          <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
-          <li><a href="#contacts"> <span>Contact</span></a></li>
-
-        </ul>
-      </nav><!-- .nav-menu -->
 
       <div class="social-links">
         <a href="https://www.linkedin.com/in/bernardo-pretti/" target="_blank" class="linkedin"><i
@@ -71,7 +55,22 @@
 
     </div>
   </header><!-- End Header -->
+  <nav class="nav-menu d-none d-lg-block sticky-top">
+    <ul>
+      <li class="active"><a href="#header"> <span>Home</span></a></li>
+      <li><a href="#about"><span>About</span></a></li>
+      <li><a href="#education"> <span>Education</span></a></li>
+      <li><a href="#experience"> <span>Experience</span></a></li>
+      <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
+      <li><a href="#portfolio"> <span>Projects</span></a></li>
+      <li><a href="#skills"> <span>Skills</span></a></li>
+      <li><a href="https://drive.google.com/file/d/1pT-Nk6AxY9ZOWBizuDb4htA3IiUF_fSe/view?usp=sharing" target="_blank">
+          <span>Resume</span></a></li>
+      <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
+      <li><a href="#contacts"> <span>Contact</span></a></li>
 
+    </ul>
+  </nav><!-- .nav-menu -->
   <!-- ======= About Section ======= -->
   <section id="about" class="about">
 
@@ -83,8 +82,8 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+        <div class="col-lg-4 d-flex justify-content-center" data-aos="fade-right">
+          <img src="assets/img/profile.jpeg" class="profile-img img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic developer with a keen interest in software development and artificial
@@ -124,37 +123,41 @@
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
             <i class="ri-global-line" style="color: #ffbb2c;"></i>
-            <h3>Software Development</h3>
+            <h3>Web Development</h3>
           </div>
+          <small>Flask & Django (Python), Javascript / JQuery, HTML, CSS, Node, Bootstrap...</small>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #5578ff;"></i>
-            <h3>Machine Learning</h3>
+            <h3>Data Engineering</h3>
           </div>
+          <small>SQL expert, NoSQL (MongoDB), ETL, Data Pipelines, </small>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-camera-3-line" style="color: #e80368;"></i>
-            <h3>Computer Vision</h3>
+            <i class="ri-english-input" style="color: #1c7d32;"></i>
+            <h3>Cloud Engineering</h3>
+
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-english-input" style="color: #1c7d32;"></i>
-            <h3>Natural Language Processing</h3>
+            <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
+            <h3>ML, DL, AI</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
-            <h3>Software Engineering</h3>
+            <i class="ri-database-2-line" style="color: #5cb5d8;"></i>
+            <h3>Databases</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
-            <h3>Visualization</h3>
+            <span class="material-symbols--cloud-outline"></span>
+            <h3>Version Control</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -166,7 +169,7 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-image-line" style="color: #ffc107;"></i>
-            <h3>Image Processing</h3>
+            <h3>Utility Engineering</h3>
           </div>
         </div>
       </div>
@@ -610,6 +613,8 @@
                 width="130">
               <img src="https://www.vectorlogo.zone/logos/postgresql/postgresql-horizontal.svg" alt="vectorlogo.zone"
                 height="50" width="190">
+              <img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="vectorlogo.zone" height="70"
+                width="140">
 
             </p>
           </div>
