--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
 
       <h1><a href="index.html">Bernardo Pretti</a></h1>
-      <h2 style="color:#fff"><span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff"><span class="typing" style="color:#ffa500"></span></h2>
 
       <div class="social-links">
         <a href="https://www.linkedin.com/in/bernardo-pretti/" target="_blank" class="linkedin"><i
@@ -57,7 +57,7 @@
   </header><!-- End Header -->
   <nav class="nav-menu d-none d-lg-block sticky-top">
     <ul>
-      <li class="active"><a href="#header"> <span>Home</span></a></li>
+      <li><a href="#header"> <span>Home</span></a></li>
       <li><a href="#about"><span>About</span></a></li>
       <li><a href="#education"> <span>Education</span></a></li>
       <li><a href="#experience"> <span>Experience</span></a></li>
@@ -132,7 +132,7 @@
             <i class="ri-database-2-line" style="color: #5578ff;"></i>
             <h3>Data Engineering</h3>
           </div>
-          <small>SQL expert, NoSQL (MongoDB), ETL, Data Pipelines, </small>
+          <small>ETL, Data Pipelines, </small>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
@@ -146,25 +146,30 @@
             <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
             <h3>ML, DL, AI</h3>
           </div>
+          <small>Machine / Deep Learning, Algorithms, Object Detection (YOLO), CNN, NLP </small>
+
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-database-2-line" style="color: #5cb5d8;"></i>
             <h3>Databases</h3>
           </div>
+          <small>SQL: PostgresSQL, MySQL, Microsoft, Oracle... <br>
+            NoSQL: MongoDB, Redis, Apache Cassandra...</small>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
             <span class="material-symbols--cloud-outline"></span>
-            <h3>Version Control</h3>
+            <h3>Tools and more</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-file-list-3-line" style="color: #47aeff;"></i>
-            <h3>Algorithms</h3>
+            <h3>Data Analysis</h3>
           </div>
+          Power BI
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
