--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <h2>Projects</h2>
       </div>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
@@ -193,159 +193,66 @@
             <li data-filter=".filter-project">Project</li>
           </ul>
         </div>
-      </div>
+      </div> -->
 
       <div class="row portfolio-container">
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center>
-            <h4>Twitter Analysis</h4>
+            <h5>Fast PID (Engineering App) <a href="https://professionalpid.onrender.com"><i class="bx bx-link"></a></i>
+            </h5>
           </center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/twitteranalysis.jpg" class="img-fluid" alt="">
+            <img src="assets/img/project/fastpid.png" class="img-fluid portfolio-img" alt="">
             <div class="portfolio-info">
+              <h4>Flask and MongoDB web app</h4>
+              <small>and HTML/CSS/JS, Docker, Bootstrap...</small>
 
               <div class="portfolio-links">
                 <a href="projects/twitteranalysis.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+                  class="venobox" title="Project Details"><small><u>Ver detalhes</u></small></a>
               </div>
+
             </div>
+
           </div>
+          <a href="https://professionalpid.onrender.com"><small> <i class="bx bx-link"></i>
+              https://professionalpid.onrender.com</small></a>
+
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center>
-            <h4>Image recognition as Service</h4>
+            <h5>Orçamentei (Budgets App) <a href="https://www.orcamentei.com/"><i class="bx bx-link"></a></i>
+            </h5>
           </center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/iras.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/project/orcamentei.png" class="img-fluid portfolio-img" alt="">
             <div class="portfolio-info">
-
+              <h4>Flask and MongoDB web app</h4>
+              <small>and HTML/CSS/JS, Stripe, Maps API, oAuth, Docker, Bootstrap...</small>
               <div class="portfolio-links">
                 <a href="projects/iras.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
-                  title="Project Details"><i class="bx bx-info-circle"></i></a>
+                  title="Project Details"><small><u>Ver detalhes</u></small></a>
               </div>
             </div>
           </div>
+          <a href="https://www.orcamentei.com/"><small><i class="bx bx-link"></i>
+              https://www.orcamentei.com/</small></a>
+
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <center>
-            <h4>Music Streaming Website</h4>
+            <h5>Music Streaming Website</h5>
           </center>
           <div class="portfolio-wrap">
-            <img src="assets/img/project/musicplayer.jpg" class="img-fluid" alt="">
+            <img src="assets/img/project/musicplayer.jpg" class="img-fluid portfolio-img" alt="">
             <div class="portfolio-info">
 
               <div class="portfolio-links">
                 <a href="projects/musicplayer.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center>
-            <h4>Movie Recommender</h4>
-          </center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/recommender.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-
-              <div class="portfolio-links">
-                <a href="projects/recommender.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center><h4>To-Do App</h4></center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/todo.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-links">
-                <a href="projects/todo.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <!-- <br> -->
-          <center>
-            <h4>Resume Section Classifier</h4>
-          </center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/resume.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Resume Section Classifier</h4>
-              <div class="portfolio-links">
-                <a href="projects/resume.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
-                  title="Project Details"><i class="bx bx-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <br>
-          <center><h4>Tech Blog</h4></center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/blog.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-links">
-                <a href="projects/blog.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <center>
-            <h4>Video Description Generator</h4>
-          </center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/vdg.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-links">
-                <a href="projects/vdg.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
-                  title="Project Details"><i class="bx bx-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <center>
-            <h4>ML-DL Web-App</h4>
-          </center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/ml.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-links">
-                <a href="projects/ml.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
-                  title="Project Details"><i class="bx bx-info-circle"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-project">
-          <!-- <br> -->
-          <center>
-            <h4>Image Generator</h4>
-          </center>
-          <div class="portfolio-wrap">
-            <img src="assets/img/project/gan.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-links">
-                <a href="projects/gan.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
-                  title="Project Details"><i class="bx bx-info-circle"></i></a>
+                  class="venobox" title="Project Details"><small><u>Ver detalhes</u></small></a>
               </div>
             </div>
           </div>
@@ -404,10 +311,12 @@
             style="background:#e5dbb1">
             <h4 style="text-align:left;color:#09203a">Tools</h4>
             <p style="text-align:center;">
+              <img src="https://www.vectorlogo.zone/logos/snowflake/snowflake-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/google_cloud/google_cloud-ar21.svg" alt="vectorlogo.zone">
-              <img src="https://www.vectorlogo.zone/logos/heroku/heroku-ar21.svg" alt="vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/docker/docker-ar21.svg" alt="vectorlogo.zone">
+              <!-- <img src="https://www.vectorlogo.zone/logos/heroku/heroku-ar21.svg" alt="vectorlogo.zone"> -->
               <img src="https://www.vectorlogo.zone/logos/jupyter/jupyter-ar21.svg" alt="vectorlogo.zone">
             </p>
           </div>
