changed a lot. Design big changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
 
       <h1><a href="index.html">Bernardo Pretti</a></h1>
-      <h2 style="color:#fff"><span class="typing" style="color:#ffa500"></span></h2>
+      <h2 style="color:#ffffff"><span class="typing" style="color:#E5DBB1"></span> Engineering</h2>
 
       <div class="social-links">
         <a href="https://www.linkedin.com/in/bernardo-pretti/" target="_blank" class="linkedin"><i
@@ -86,19 +86,21 @@
           <img src="assets/img/profile.jpeg" class="profile-img img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Working with engineering since 2018
+          <p>Working with different types of engineering since 2018. Started in mechanical, went through software and
+            stabilized in data over the last years.
           </p>
-          <div class="row">
+          <strong>HIGHLIGHTS </strong>
+          <div class="row" style="color:#E5DBB1">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 26 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +55 27 997438816</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Age: </strong>27 years</li>
+                <!-- <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +55 27 997438816</li> -->
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Brazil, ES</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> prettibernardo@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City: </strong>Vitória-ES / Brazil</li>
+                <!-- <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> prettibernardo@gmail.com</li> -->
               </ul>
             </div>
           </div>
@@ -115,33 +117,39 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-md-4" data-toggle="tooltip" data-placement="top" title="Flask & Django (Python), Javascript / JQuery, HTML, CSS, Node,
+            Bootstrap...">
           <div class="icon-box">
-            <i class="ri-global-line" style="color: #ffbb2c;"></i>
+            <i class="ri-global-line" style="color: rgb(94, 85, 53);"></i>
             <h3>Web Development</h3>
+            <i class="ri-information-line"
+              style="font-size: 1em; color: #252215; opacity: .8; position: absolute; top: 3px; right: 8px;"></i>
           </div>
-          <small>Flask & Django (Python), Javascript / JQuery, HTML, CSS, Node, Bootstrap...</small>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+        <div class="col-lg-3 col-md-4 mt-4 mt-md-0" data-toggle="tooltip" data-placement="top"
+          title="ETL, Data Pipelines,">
           <div class="icon-box">
-            <i class="ri-database-2-line" style="color: #5578ff;"></i>
+            <i class="ri-database-2-line" style="color: rgb(94, 85, 53);"></i>
             <h3>Data Engineering</h3>
+            <i class="ri-information-line"
+              style="font-size: 1em; color: #252215; opacity: .8; position: absolute; top: 3px; right: 8px;"></i>
           </div>
-          <small>ETL, Data Pipelines, </small>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-english-input" style="color: #1c7d32;"></i>
+            <i class="ri-english-input" style="color: rgb(94, 85, 53);"></i>
             <h3>Cloud Engineering</h3>
+            <i class="ri-information-line"
+              style="font-size: 1em; color: #252215; opacity: .8; position: absolute; top: 3px; right: 8px;"></i>
 
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0" ata-toggle="tooltip" data-placement="top"
+          title="Machine / Deep Learning, Algorithms, Object Detection (YOLO), CNN, NLP...">
           <div class="icon-box">
             <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
             <h3>ML, DL, AI</h3>
           </div>
-          <small>Machine / Deep Learning, Algorithms, Object Detection (YOLO), CNN, NLP... </small>
 
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -206,7 +214,7 @@
             <img src="assets/img/project/fastpid.png" class="img-fluid portfolio-img" alt="">
             <div class="portfolio-info">
               <h4>Flask and MongoDB web app</h4>
-              <small>and HTML/CSS/JS, Docker, Bootstrap...</small>
+              <small>and HTML/CSS/JS, Docker, SocketIO, Bootstrap...</small>
 
               <div class="portfolio-links">
                 <a href="projects/twitteranalysis.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
@@ -218,6 +226,10 @@
           </div>
           <a href="https://professionalpid.onrender.com"><small> <i class="bx bx-link"></i>
               https://professionalpid.onrender.com</small></a>
+          <br>
+          <div class="badge badge-secondary">Flask (Python)</div>
+          <div class="badge badge-info">Docker</div>
+          <div class="badge badge-warning">NoSQL</div>
 
         </div>
 
@@ -230,7 +242,7 @@
             <img src="assets/img/project/orcamentei.png" class="img-fluid portfolio-img" alt="">
             <div class="portfolio-info">
               <h4>Flask and MongoDB web app</h4>
-              <small>and HTML/CSS/JS, Stripe, Maps API, oAuth, Docker, Bootstrap...</small>
+              <small>and HTML/CSS/JS, Stripe, Maps API, Vite, oAuth, Docker, Bootstrap...</small>
               <div class="portfolio-links">
                 <a href="projects/iras.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox"
                   title="Project Details"><small><u>Ver detalhes</u></small></a>
@@ -239,6 +251,10 @@
           </div>
           <a href="https://www.orcamentei.com/"><small><i class="bx bx-link"></i>
               https://www.orcamentei.com/</small></a>
+          <br>
+          <div class="badge badge-secondary">Flask (Python)</div>
+          <div class="badge badge-info">Docker</div>
+          <div class="badge badge-warning">NoSQL</div>
 
         </div>
 
@@ -275,7 +291,7 @@
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
             style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#09203a">Languages and Databases</h4>
+            <h4 style="text-align:left;color:#5E5535">Languages and Databases</h4>
             <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone"
                 height="50" width="150">
@@ -295,7 +311,7 @@
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100"
             style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#09203a">Frameworks</h4>
+            <h4 style="text-align:left;color:#5E5535">Frameworks</h4>
             <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/djangoproject/djangoproject-ar21.svg" alt="vectorlogo.zone">
@@ -309,7 +325,7 @@
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100"
             style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#09203a">Tools</h4>
+            <h4 style="text-align:left;color:#5E5535">Tools</h4>
             <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/snowflake/snowflake-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone">
@@ -326,6 +342,90 @@
   </section>
 
   <!-- End Skills Section -->
+
+  <!-- Start Experience Section -->
+
+  <section id="experience" class="services">
+    <div class="container">
+      <div class="section-title">
+        <h2>Experience</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-12" data-aos="fade-up">
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Arizona State
+                University</a><br> </h4>
+            <h5 style="text-align:left;">January 2021 - Present</h5>
+            <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
+            <ul style="text-align:left;">
+              <li>Managed large‑scale deployment of JupyterHub with Nbgrader and webwork software, facilitating approx
+                5500 students.</li>
+              <li>Configured, troubleshot, and administered server‑side web applications for the statistics department.
+              </li>
+              <li>Handled Linux server administration and Apache configuration; automated tasks like user account
+                creation, managing student database, and system maintenance using Shell and automation scripts, reducing
+                manual work by 200%.</li>
+            </ul>
+          </div>
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">Augmenify Infotech
+                Pvt. Ltd.</a><br> </h4>
+            <h5 style="text-align:left;">August 2020 - November 2020</h5>
+            <p style="text-align:left;color:#fff"><em>Backend Developer</em></p>
+            <ul style="text-align:left;">
+              <li>Documented and coded server‑less web application for the hotel industry and designed REST API using
+                Flask‑based JWT authentication.</li>
+              <li>Redeveloped an existing system to support customer account management, scheduling, and time tracking;
+                enabled dynamic API calls with the help of Amazon API Gateway, AWS Lambda, and DynamoDB.</li>
+            </ul>
+          </div>
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#12d640">Epitome
+                Corporation Pvt. Ltd.</a><br> </h4>
+            <h5 style="text-align:left;">July 2019 - Dec 2019</h5>
+            <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
+            <ul style="text-align:left;">
+              <li>Tested, designed, and developed backend APIs of WebRTC enabled multi‑party video conferencing web
+                application and delivered the project 15 days ahead of schedule by efficiently designing the flow of the
+                project.</li>
+            </ul>
+          </div>
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank"
+                style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4>
+            <h5 style="text-align:left;">May 2018 - June 2018</h5>
+            <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p>
+            <ul style="text-align:left;">
+              <li>Optimized image processing algorithm of pill detection by creating customized MASKRCNN algorithm,
+                increasing accuracy by 15%; trained classification algorithm with the help of triplet loss to learn the
+                image embedding of pill, reducing the hassle of collecting data of new pills. </li>
+              <li>Devised a pipeline of the project to incorporate it into the product of the company. Implemented
+                Restful APIs in Django that enabled our quality Analyst team to increase reporting speed by 46%.</li>
+              <li>Built a web app to onboard data from the company’s product using Flask, Postgres, and AWS S3, enabling
+                interactive charts in real-time.</li>
+              <li>Mentored 2 interns to optimize the pill detection algorithm and to include the multiprocessing
+                pipeline, increasing overall speed by 75%.</li>
+            </ul>
+          </div>
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+            <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank"
+                style="color:#12d640">Space Application Centre, ISRO</a><br> </h4>
+            <h5 style="text-align:left;">Jan 2018 - May 2018</h5>
+            <p style="text-align:left;color:#fff"><em>Research Intern</em></p>
+            <ul style="text-align:left;">
+              <li>Implemented noise reduction algorithm on the satellite image and prepared architecture for detecting
+                objects in high‑resolution satellite images, achieving 80% accuracy.</li>
+              <li>Increased accessibility of satellite image data by redesigning database and application for showcasing
+                graphical data.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- End Experience Section -->
+
 
   <!-- ======= Education Section ======= -->
   <section id="education" class="services">
@@ -667,7 +767,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing', {
-      strings: ["Data Engineering", "Web Development", "AI, ML and DL", "Mech. Engineering"],
+      strings: ["Data", "Software", "Machine Learning", "Mechanical"],
       loop: true,
       typeSpeed: 45,
       backSpeed: 30
@@ -676,6 +776,11 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    })
+  </script>
 
 </body>
 
