--- a/index.html
+++ b/index.html
@@ -225,12 +225,15 @@
 
           </div>
           <a href="https://professionalpid.onrender.com"><small> <i class="bx bx-link"></i>
-              https://professionalpid.onrender.com</small></a>
+              https://professionalpid.onrender.com</small></a> <small style="color: white">(free hosting - wait 30s)
+          </small>
           <br>
           <div class="badge badge-secondary">Flask (Python)</div>
           <div class="badge badge-info">Docker</div>
           <div class="badge badge-warning">NoSQL</div>
-
+          <div class="badge badge-secondary" style="background-color: rgb(77, 187, 127);">SocketIO</div>
+          <div class="badge badge-secondary" style="background-color: rgb(156, 28, 156);">Bootstrap</div>
+          <div class="badge badge-secondary" style="background-color: rgb(188, 194, 102);">API</div>
         </div>
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
@@ -250,11 +253,14 @@
             </div>
           </div>
           <a href="https://www.orcamentei.com/"><small><i class="bx bx-link"></i>
-              https://www.orcamentei.com/</small></a>
+              https://www.orcamentei.com/</small></a> <small style="color: white">(free hosting - wait 30s)
+          </small>
           <br>
           <div class="badge badge-secondary">Flask (Python)</div>
           <div class="badge badge-info">Docker</div>
           <div class="badge badge-warning">NoSQL</div>
+          <div class="badge badge-secondary" style="background-color: rgb(156, 28, 156);">Bootstrap</div>
+          <div class="badge badge-secondary" style="background-color: rgb(188, 194, 102);">API</div>
 
         </div>
 
@@ -291,34 +297,91 @@
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
             style="background:#e5dbb1">
-            <h4 style="text-align:left;color:#5E5535">Languages and Databases</h4>
+            <h4 style="text-align:left;color:#5E5535">Languages</h4>
             <p style="text-align:center;">
-              <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone"
-                height="50" width="150">
-              <img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="50"
-                width="120">
-              <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
-                alt="upload.wikimedia.org" height="60" width="90">
+            <div></div>
+            <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg" alt="vectorlogo.zone" height="50">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Sql_data_base_with_logo.svg"
+              alt="vectorlogo.zone" height="40">
+            <img src="https://www.vectorlogo.zone/logos/w3_html5/w3_html5-ar21.svg" alt="vectorlogo.zone" height="55">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
+              alt="upload.wikimedia.org" height="40">
+            <img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="40"
+              width="120">
+
+            </p>
+          </div>
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
+            style="background:#e5dbb1">
+            <h4 style="text-align:left;color:#5E5535">Data Tools</h4>
+            <p style="text-align:center;">
+              <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-ar21.svg" alt="vectorlogo.zone"
+                height="50">
+              <img
+                src="https://upload.vectorlogo.zone/logos/apache_airflow/images/3ace832a-ef3c-489d-a0a2-b8a9ad16423f.svg"
+                alt="vectorlogo.zone" height="50">
+              <img src="https://www.vectorlogo.zone/logos/databricks/databricks-ar21.svg" alt="vectorlogo.zone"
+                height="60">
+              <img src="https://www.vectorlogo.zone/logos/apache_kafka/apache_kafka-ar21.svg" alt="vectorlogo.zone"
+                height="50">
+              <img
+                src="https://raw.githubusercontent.com/cncf/landscape/570b758bae48d0a0cbd21651bb5cad63059f248e/hosted_logos/trino.svg"
+                alt="vectorlogo.zone" height="50">
+              <img src="https://www.vectorlogo.zone/logos/apache_hadoop/apache_hadoop-ar21.svg" alt="vectorlogo.zone"
+                height="50">
+              <img src="https://upload.vectorlogo.zone/logos/getdbt/images/bfd2e20c-3067-4898-861d-7e2913beb27f.svg"
+                height="35" alt="vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/minioio/minioio-ar21.svg" alt="vectorlogo.zone" height="50">
+              <img
+                src="https://upload.vectorlogo.zone/logos/pydata_pandas/images/3379b038-0796-45fe-8467-3fba66c10b70.svg"
+                alt="vectorlogo.zone" height="50">
+              <img src="https://www.vectorlogo.zone/logos/microsoft_powerbi/microsoft_powerbi-ar21.svg"
+                alt="vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/debeziumio/debeziumio-ar21.svg" alt="vectorlogo.zone">
+              <img src="https://upload.vectorlogo.zone/logos/airbyteio/images/0b7e92bd-0471-4017-8820-a0a943de92f4.svg"
+                alt="vectorlogo.zone" height="25">
+            </p>
+            <small style="color: black;">Others: Delta Lake, Dagster, Mage.io, ElasticSearch, Superset, ClickHouse,
+              Druid, Amundsen...</small>
+          </div>
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
+            style="background:#e5dbb1">
+            <h4 style="text-align:left;color:#5E5535">Databases & Warehouses</h4>
+            <p style="text-align:center;">
               <img src="https://www.vectorlogo.zone/logos/mysql/mysql-horizontal.svg" alt="vectorlogo.zone" height="70"
                 width="130">
               <img src="https://www.vectorlogo.zone/logos/postgresql/postgresql-horizontal.svg" alt="vectorlogo.zone"
-                height="50" width="190">
+                height="40" width="190">
               <img src="https://www.vectorlogo.zone/logos/mongodb/mongodb-ar21.svg" alt="vectorlogo.zone" height="70"
                 width="140">
+              <img src="https://www.vectorlogo.zone/logos/snowflake/snowflake-ar21.svg" alt="vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/sqlite/sqlite-ar21.svg" alt="vectorlogo.zone" height="50">
+            </p>
+          </div>
 
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100"
+            style="background:#e5dbb1">
+            <h4 style="text-align:left;color:#5E5535">Cloud</h4>
+            <p style="text-align:center;">
+              <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" alt="vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/google_cloud/google_cloud-ar21.svg" alt="vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/microsoft_azure/microsoft_azure-ar21.svg"
+                alt="vectorlogo.zone">
             </p>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100"
             style="background:#e5dbb1">
             <h4 style="text-align:left;color:#5E5535">Frameworks</h4>
             <p style="text-align:center;">
-              <img src="https://www.vectorlogo.zone/logos/pocoo_flask/pocoo_flask-ar21.svg" alt="vectorlogo.zone">
-              <img src="https://www.vectorlogo.zone/logos/djangoproject/djangoproject-ar21.svg" alt="vectorlogo.zone">
-              <img src="https://www.vectorlogo.zone/logos/nodejs/nodejs-horizontal.svg" alt="vectorlogo.zone">
-              <img src="https://www.vectorlogo.zone/logos/getbootstrap/getbootstrap-ar21.svg" alt="vectorlogo.zone">
-              <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-ar21.svg" alt="vectorlogo.zone">
-              <!-- <img src="https://www.vectorlogo.zone/logos/pytorch/pytorch-ar21.svg" alt="vectorlogo.zone"> -->
+              <img src="https://www.vectorlogo.zone/logos/palletsprojects_flask/palletsprojects_flask-ar21~v2.svg"
+                alt="Flask vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/djangoproject/djangoproject-ar21.svg"
+                alt="Django vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/nodejs/nodejs-horizontal.svg" alt="Node.js vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/getbootstrap/getbootstrap-ar21.svg"
+                alt="Bootstrap vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/tensorflow/tensorflow-ar21.svg"
+                alt="Tensorflowvectorlogo.zone">
               <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg"
                 alt="upload.wikimedia.org" width="90" height="70">
             </p>
@@ -327,13 +390,11 @@
             style="background:#e5dbb1">
             <h4 style="text-align:left;color:#5E5535">Tools</h4>
             <p style="text-align:center;">
-              <img src="https://www.vectorlogo.zone/logos/snowflake/snowflake-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/git-scm/git-scm-ar21.svg" alt="vectorlogo.zone">
-              <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-ar21.svg" alt="vectorlogo.zone">
-              <img src="https://www.vectorlogo.zone/logos/google_cloud/google_cloud-ar21.svg" alt="vectorlogo.zone">
               <img src="https://www.vectorlogo.zone/logos/docker/docker-ar21.svg" alt="vectorlogo.zone">
-              <!-- <img src="https://www.vectorlogo.zone/logos/heroku/heroku-ar21.svg" alt="vectorlogo.zone"> -->
               <img src="https://www.vectorlogo.zone/logos/jupyter/jupyter-ar21.svg" alt="vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/gnu_bash/gnu_bash-ar21.svg" alt="vectorlogo.zone">
+              <img src="https://www.vectorlogo.zone/logos/kubernetes/kubernetes-ar21.svg" alt="vectorlogo.zone">
             </p>
           </div>
         </div>
@@ -357,8 +418,15 @@
             <h5 style="text-align:left;">2019 - Present</h5>
             <p style="text-align:left;color:#fff"><em>Senior Utility Systems Analyst</em></p>
             <ul style="text-align:left;">
-              <li>Y</li>
-              <li>X</li>
+              <li> Responsible for preparing technical documents such as Engineering Flow Diagrams and Calculation
+                Reports for utility systems.
+              </li>
+              <li>
+                Led industrial projects focused on designing complex systems like water networks, compressed air
+                systems, and dust extraction.
+              </li>
+              <li>Applied detailed simulations and calculations to optimize system performance for large-scale projects.
+              </li>
 
             </ul>
           </div>
@@ -367,8 +435,17 @@
             <h5 style="text-align:left;">2023 - Present</h5>
             <p style="text-align:left;color:#fff"><em>Data Engineer and Web Developer Freelancer</p>
             <ul style="text-align:left;">
-              <li>X</li>
-              <li>Y</li>
+              <li>Developed data pipelines using Apache Spark and Delta Lake to efficiently process large datasets.</li>
+              <li>Built ETL process orchestration using Airflow, including data ingestion and storage integration with
+                S3.</li>
+              <li>Implemented medallion architecture to ensure clean and structured data, from ingestion to final
+                analysis.</li>
+              <li>Automated data pipelines using Docker and Docker Compose for local development and production
+                deployment.</li>
+              <li>Utilized dbt for data transformation, creating models that ensure data governance and quality.</li>
+              <li>Developed APIs and dashboards using Flask to present insights from processed data.</li>
+              <li>Collaborated on web development projects with backend in Flask/Django and frontend using HTML/CSS/JS,
+                ensuring performance and responsive design.</li>
             </ul>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
