--- a/projects/fastpiddetail.html
+++ b/projects/fastpiddetail.html
@@ -47,26 +47,33 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Image Generator</h2>
+            <h2 style="color:#70E4C3">Fast PID (Engineering Diagram SaaS)</h2>
+            <hr>
+            <div class="d-flex align-items-center justify-content-center">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/uKNXUuIbRBM?si=uDyZfxnStkIqsR0L"
+                title="YouTube video player" style="border:2px solid #70E4C3; border-radius: 10px;"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <hr>
             <ul>
-              <li><strong>Tech Stack</strong>: Python, HTML, CSS, Bootstrap, GCP(Pub/Sub, Dataflow, Data Studio, GAE,
-                BigQuery)</li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/TwitterAnalysis"
-                  target="_blank">Project Link</a></li>
+              <li><strong>Tech Stack</strong>: Flask (Python), HTML, CSS, Bootstrap, MongoDB, Docker, SocketIO</li>
+              <li><strong>Github URL</strong>: Not an Open Source Project</li>
             </ul>
 
             <p>
-              Created a web‑based elastic application to provide the user with a detailed analysis of the sentiment of
-              users on top 10 trending movies and songs with the help of Google Cloud Platform services.
+              A Flask Web application that allows users to create, view, and modify process and instrumentation diagrams
+              in real-time just dragging and dropping components.
             </p>
             <p>
-              Coded Pub/Sub routine to fetch 1000 tweets at a time from Twitter; used Dataflow for resource autoscaling
-              and dynamic work rebalancing, reducing overall response time by 50\%; stored data in BigQuery table for
-              efficiently displaying data in Google DataStudio.
+              It's possible to colaborate in real-time and use for sizing pumps, vessels, pipes, compressors, etc.
             </p>
             <p>
-              Tested the scalability of web application by generating 10000 user requests with the help of Apache Beam.
+              For scalability a NoSQL database was used (MongoDB).
             </p>
+            <h5>Project Details</h5>
+            <small>File / Lines of code</small>
+            <hr>
             <div class="row align-items-center justify-content-center">
               <div class="col-md-4 portfolio-inside">
                 __init__.py | 58 +
