--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <div class="container">
 
       <h1><a href="index.html">Bernardo Pretti</a></h1>
-      <h2 style="color:#ffffff"><span class="typing" style="color:#E5DBB1"></span> Engineering</h2>
+      <h2 style="color:#ffffff"><span class="typing" style="color:#E5DBB1"></span> Engineer</h2>
+      <small><i>Multi-domain engineer</i></small>
 
       <div class="social-links">
         <a href="https://www.linkedin.com/in/bernardo-pretti/" target="_blank" class="linkedin"><i
@@ -92,10 +93,10 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 
           <div class="mb-3">
-            <p>Working with different types of engineering since 2018. Started in <b
-                style="color:#d6c98d">mechanical</b>, went through
+            <p>I have been working in various engineering fields since 2018. Started in <b
+                style="color:#d6c98d">mechanical</b>, transitioned to
               <b style="color:#aed191">software</b> and
-              stabilized in <b style="color:#90d4aa">data engineering</b> over the last years.
+              have settled into <b style="color:#90d4aa">data engineering</b> in recent years.
             </p>
             <div class="skills">
               <div class="skill-item">
@@ -177,6 +178,9 @@
       </div>
 
     </div><!-- End About Me -->
+  </section>
+
+  <section>
 
     <!-- ======= Interests ======= -->
     <div class="interests container">
@@ -217,7 +221,7 @@
           title="Machine / Deep Learning, Algorithms, Object Detection (YOLO), CNN, NLP...">
           <div class="icon-box">
             <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
-            <h3>ML, DL, AI</h3>
+            <h3>DevOps Engineering</h3>
           </div>
 
         </div>
@@ -233,7 +237,7 @@
           <div class="icon-box">
             <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
             <span class="material-symbols--cloud-outline"></span>
-            <h3>Tools and more</h3>
+            <h3>ML, DL and AI</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
@@ -254,6 +258,60 @@
     </div><!-- End Interests -->
   </section>
   <!-- End About Section -->
+
+  <section id="about" class="about">
+    <!-- ======= About Me ======= -->
+    <div class="about-me container">
+      <div class="section-title">
+        <h2>About</h2>
+      </div>
+
+      <div class="row align-items-stretch"> <!-- Align items to stretch the height -->
+        <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <p>Data Engineering Projects:</p>
+          <div class="data-projects">
+            <div class="data-projects-item d-flex">
+
+              <!-- Title and Icons Section (col-8) -->
+              <div class="data-projects-title col-8">
+                <div class="description">
+                  <small>
+                    End-to-End Data Engineering project using Spark, Airflow, Jupyer, dbt, EC2 and more
+                  </small>
+                </div>
+                <div class="data-projects-item-icons">
+                  <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" height="16">
+                  <img src="https://www.svgviewer.dev/static-svgs/476508/sql.svg" alt="SQL" height="16">
+                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
+                    height="16">
+                  <img
+                    src="https://upload.vectorlogo.zone/logos/apache_airflow/images/9c14446f-4cdc-4b19-9290-c753fc20fb2a.svg"
+                    alt="Apache Airflow" height="16">
+                  <img src="https://www.vectorlogo.zone/logos/docker/docker-icon.svg" alt="Docker" height="24">
+                  <img src="https://svgmix.com/uploads/3111e8-aws-s3.svg" alt="AWS S3" height="16">
+
+
+                </div>
+              </div>
+
+              <!-- Media Links Section (col-4) -->
+              <div class="data-projects-media col-2 d-flex justify-content-center data-links"
+                style="max-width: 100% !important;">
+                <a href="https://www.github.com/prettibernardo" target="_blank" class="github mx-2">
+                  <i class="bx bxl-github"></i>
+                </a>
+                <a href="https://medium.com/@prettibernardo" target="_blank" class="medium">
+                  <i class="bx bxl-medium"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div><!-- End About Me -->
+      </div>
+    </div>
+  </section>
+
+
   <!-- Start Project Section -->
 
   <section id="portfolio" class="portfolio">
@@ -355,7 +413,6 @@
             alt="upload.wikimedia.org" height="40">
           <img src="https://www.vectorlogo.zone/logos/java/java-horizontal.svg" alt="vectorlogo.zone" height="40"
             width="120">
-
           </p>
         </div>
         <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="background:#84ce9c">
@@ -841,7 +898,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing', {
-      strings: ["Data", "Software", "Machine Learning", "Mechanical"],
+      strings: ["Data", "Software", "DevOps", "Mechanical"],
       loop: true,
       typeSpeed: 45,
       backSpeed: 30
