--- a/index.html
+++ b/index.html
@@ -268,10 +268,14 @@
 
       <div class="row align-items-stretch"> <!-- Align items to stretch the height -->
         <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Data Engineering Projects:</p>
+          <p>Data Engineering Projects (read on Medium & Github)</p>
           <div class="data-projects">
-            <div class="data-projects-item d-flex">
 
+
+            <div class="data-projects-item d-flex">
+              <div class="data-projects-title d-flex justify-content-center align-items-center">
+                <b style="font-size: 2.2em; color: #E5DBB1">1</b>
+              </div>
               <!-- Title and Icons Section (col-8) -->
               <div class="data-projects-title col-8">
                 <div class="description">
@@ -289,13 +293,10 @@
                     alt="Apache Airflow" height="16">
                   <img src="https://www.vectorlogo.zone/logos/docker/docker-icon.svg" alt="Docker" height="24">
                   <img src="https://svgmix.com/uploads/3111e8-aws-s3.svg" alt="AWS S3" height="16">
-
-
                 </div>
               </div>
-
               <!-- Media Links Section (col-4) -->
-              <div class="data-projects-media col-2 d-flex justify-content-center data-links"
+              <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
                 style="max-width: 100% !important;">
                 <a href="https://www.github.com/prettibernardo" target="_blank" class="github mx-2">
                   <i class="bx bxl-github"></i>
@@ -305,9 +306,74 @@
                 </a>
               </div>
             </div>
+
+            <div class="data-projects-item d-flex">
+              <div class="data-projects-title d-flex justify-content-center align-items-center">
+                <b style="font-size: 2.2em; color: #E5DBB1">2</b>
+              </div>
+              <div class="data-projects-title col-8">
+                <div class="description">
+                  <small>
+                    Understanding Apache Spark Clusters and integrating them with Airflow
+                  </small>
+                </div>
+                <div class="data-projects-item-icons">
+                  <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" height="16">
+
+                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
+                    height="16">
+                  <img
+                    src="https://upload.vectorlogo.zone/logos/apache_airflow/images/9c14446f-4cdc-4b19-9290-c753fc20fb2a.svg"
+                    alt="Apache Airflow" height="16">
+                  <img src="https://svgmix.com/uploads/3111e8-aws-s3.svg" alt="AWS S3" height="16">
+                </div>
+              </div>
+              <!-- Media Links Section (col-4) -->
+              <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
+                style="max-width: 100% !important;">
+                <a href="https://www.github.com/prettibernardo" target="_blank" class="github mx-2">
+                  <i class="bx bxl-github"></i>
+                </a>
+                <a href="https://medium.com/@prettibernardo" target="_blank" class="medium">
+                  <i class="bx bxl-medium"></i>
+                </a>
+              </div>
+            </div>
+            <div class="data-projects-item d-flex">
+              <div class="data-projects-title d-flex justify-content-center align-items-center">
+                <b style="font-size: 2.2em; color: #E5DBB1">3</b>
+              </div>
+              <!-- Title and Icons Section (col-8) -->
+              <div class="data-projects-title col-8">
+                <div class="description">
+                  <small>
+                    Deploying an Apache Spark Cluster: From theory to Practice
+                  </small>
+                </div>
+                <div class="data-projects-item-icons">
+                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
+                    height="16">
+                </div>
+              </div>
+              <!-- Media Links Section (col-4) -->
+              <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
+                style="max-width: 100% !important;">
+                <a href="https://www.github.com/prettibernardo" target="_blank" class="github mx-2">
+                  <i class="bx bxl-github"></i>
+                </a>
+                <a href="https://medium.com/@prettibernardo" target="_blank" class="medium">
+                  <i class="bx bxl-medium"></i>
+                </a>
+              </div>
+            </div>
+
+
           </div>
         </div><!-- End About Me -->
       </div>
+
+
+
     </div>
   </section>
 
