some link and project changes

--- a/index.html
+++ b/index.html
@@ -268,20 +268,101 @@
 
       <div class="row align-items-stretch"> <!-- Align items to stretch the height -->
         <div class="col-lg-12 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <p>Data Engineering Projects (read on Medium & Github)</p>
+          <p style="font-size: 1.3em; color: #E5DBB1">Data Engineering Articles and Projects (read on Medium & Github)
+          </p>
           <div class="data-projects">
 
 
-            <div class="data-projects-item d-flex">
+            <div class="data-projects-item d-flex mb-2">
               <div class="data-projects-title d-flex justify-content-center align-items-center">
                 <b style="font-size: 2.2em; color: #E5DBB1">1</b>
               </div>
               <!-- Title and Icons Section (col-8) -->
               <div class="data-projects-title col-8">
                 <div class="description">
-                  <small>
-                    End-to-End Data Engineering project using Spark, Airflow, Jupyer, dbt, EC2 and more
-                  </small>
+                  Deploying Apache Spark Clusters: A Comparison of EC2, EMR, Databricks & More
+                </div>
+                <div class="data-projects-item-icons">
+                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
+                    height="16">
+                  <img src="https://www.vectorlogo.zone/logos/databricks/databricks-icon.svg" alt="Databricks"
+                    height="16">
+                  <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-icon.svg" alt="AWS EMR" height="16">
+                </div>
+              </div>
+              <!-- Media Links Section (col-4) -->
+              <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
+                style="max-width: 100% !important;">
+                <a href="https://medium.com/@prettibernardo/deploying-apache-spark-clusters-a-comparison-of-ec2-emr-databricks-more-d6d16d7de710"
+                  target="_blank" class="medium">
+                  <i class="bx bxl-medium"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="data-projects-item d-flex mb-2">
+              <div class="data-projects-title d-flex justify-content-center align-items-center">
+                <b style="font-size: 2.2em; color: #E5DBB1">2</b>
+              </div>
+              <div class="data-projects-title col-8">
+                <div class="description">
+                  Building Scalable Data Pipelines with Apache Spark and Airflow
+                </div>
+                <div class="data-projects-item-icons">
+                  <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" height="16">
+
+                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
+                    height="16">
+                  <img
+                    src="https://upload.vectorlogo.zone/logos/apache_airflow/images/9c14446f-4cdc-4b19-9290-c753fc20fb2a.svg"
+                    alt="Apache Airflow" height="16">
+                  <img src="https://svgmix.com/uploads/3111e8-aws-s3.svg" alt="AWS S3" height="16">
+                </div>
+              </div>
+              <!-- Media Links Section (col-4) -->
+              <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
+                style="max-width: 100% !important;">
+                <a href="https://medium.com/@prettibernardo/building-scalable-data-pipelines-with-apache-spark-and-airflow-4195685533a0"
+                  target="_blank" class="medium">
+                  <i class="bx bxl-medium"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="data-projects-item d-flex mb-2">
+              <div class="data-projects-title d-flex justify-content-center align-items-center">
+                <b style="font-size: 2.2em; color: #E5DBB1">3</b>
+              </div>
+              <div class="data-projects-title col-8">
+                <div class="description">
+                  Deploying a Spark Cluster on AWS EC2 Instances
+                </div>
+                <div class="data-projects-item-icons">
+                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
+                    height="16">
+                  <img src="https://www.vectorlogo.zone/logos/amazon_aws/amazon_aws-icon.svg" alt="AWS EMR" height="16">
+                </div>
+              </div>
+              <!-- Media Links Section (col-4) -->
+              <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
+                style="max-width: 100% !important;">
+                <a href="https://medium.com/@prettibernardo/deploying-a-spark-cluster-on-aws-ec2-instances-acc6cc200a46"
+                  target="_blank" class="medium">
+                  <i class="bx bxl-medium"></i>
+                </a>
+              </div>
+            </div>
+
+
+            <div class="data-projects-item d-flex mb-2">
+              <div class="data-projects-title d-flex justify-content-center align-items-center">
+                <b style="font-size: 2.2em; color: #E5DBB1">4</b>
+              </div>
+              <div class="data-projects-title col-8">
+                <div class="description">
+
+                  End-to-End Data Engineering project using Spark, Airflow, Jupyer, dbt, EC2 and more
+
                 </div>
                 <div class="data-projects-item-icons">
                   <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" height="16">
@@ -298,75 +379,14 @@
               <!-- Media Links Section (col-4) -->
               <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
                 style="max-width: 100% !important;">
-                <a href="https://www.github.com/prettibernardo" target="_blank" class="github mx-2">
-                  <i class="bx bxl-github"></i>
-                </a>
                 <a href="https://medium.com/@prettibernardo" target="_blank" class="medium">
                   <i class="bx bxl-medium"></i>
                 </a>
-              </div>
-            </div>
-
-            <div class="data-projects-item d-flex">
-              <div class="data-projects-title d-flex justify-content-center align-items-center">
-                <b style="font-size: 2.2em; color: #E5DBB1">2</b>
-              </div>
-              <div class="data-projects-title col-8">
-                <div class="description">
-                  <small>
-                    Understanding Apache Spark Clusters and integrating them with Airflow
-                  </small>
-                </div>
-                <div class="data-projects-item-icons">
-                  <img src="https://www.vectorlogo.zone/logos/python/python-icon.svg" alt="Python" height="16">
-
-                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
-                    height="16">
-                  <img
-                    src="https://upload.vectorlogo.zone/logos/apache_airflow/images/9c14446f-4cdc-4b19-9290-c753fc20fb2a.svg"
-                    alt="Apache Airflow" height="16">
-                  <img src="https://svgmix.com/uploads/3111e8-aws-s3.svg" alt="AWS S3" height="16">
-                </div>
-              </div>
-              <!-- Media Links Section (col-4) -->
-              <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
-                style="max-width: 100% !important;">
                 <a href="https://www.github.com/prettibernardo" target="_blank" class="github mx-2">
                   <i class="bx bxl-github"></i>
                 </a>
-                <a href="https://medium.com/@prettibernardo" target="_blank" class="medium">
-                  <i class="bx bxl-medium"></i>
-                </a>
               </div>
             </div>
-            <div class="data-projects-item d-flex">
-              <div class="data-projects-title d-flex justify-content-center align-items-center">
-                <b style="font-size: 2.2em; color: #E5DBB1">3</b>
-              </div>
-              <!-- Title and Icons Section (col-8) -->
-              <div class="data-projects-title col-8">
-                <div class="description">
-                  <small>
-                    Deploying an Apache Spark Cluster: From theory to Practice
-                  </small>
-                </div>
-                <div class="data-projects-item-icons">
-                  <img src="https://www.vectorlogo.zone/logos/apache_spark/apache_spark-icon.svg" alt="Apache Spark"
-                    height="16">
-                </div>
-              </div>
-              <!-- Media Links Section (col-4) -->
-              <div class="data-projects-media col-2 d-flex justify-content-center align-items-center data-links"
-                style="max-width: 100% !important;">
-                <a href="https://www.github.com/prettibernardo" target="_blank" class="github mx-2">
-                  <i class="bx bxl-github"></i>
-                </a>
-                <a href="https://medium.com/@prettibernardo" target="_blank" class="medium">
-                  <i class="bx bxl-medium"></i>
-                </a>
-              </div>
-            </div>
-
 
           </div>
         </div><!-- End About Me -->
